updated navigation and fixed_nav js to work for both paid search and non; updated masthead for new design; finished paid search pages and built js for form; *temporarily added a case to paid search controller to access no_leak_b.php

--- a/src/public/sass/base/_elements.scss
+++ b/src/public/sass/base/_elements.scss
@@ -17,6 +17,7 @@ body {
     color: $color-default;
     font-family: $font-family-default;
     font-size: $font-size-default * .875; // set to 14px on mobile
+    font-weight: 300;
     line-height: $line-height-default;
 
     @include bp($mobile-landscape) {
