--- a/src/public/sass/styles.scss
+++ b/src/public/sass/styles.scss
@@ -35,6 +35,7 @@
 @import "modules/incentives";
 @import "modules/locator";
 @import "modules/map";
+@import "modules/paid-search-mobile";
 @import "modules/polaroids";
 @import "modules/products-section";
 @import "modules/slick";
