--- a/src/public/sass/layout/_header.scss
+++ b/src/public/sass/layout/_header.scss
@@ -9,11 +9,6 @@
     text-align: center;
     width: 100%;
 
-    /*.nav-header--is-open & {
-        @include bp($foundation-small, $tablet) {
-            background: $color-grey-dark;
-        }
-    }*/
     &.is-fixed {
         box-shadow: 0 1px 7px 0 rgba(50,50,50,.25);
         left: auto;
@@ -127,10 +122,6 @@
         }
 
         @include bp($foundation-small, $tablet) {
-            margin: {
-                left: auto;
-                right: auto;
-            }
             max-width: 220px;
         }
         @include bp($foundation-med) {
@@ -201,9 +192,8 @@
             display: inline-block;
 
             img {
-                max-height: 200px;
-                max-width: 250px;
-                width: 100%;
+                max-height: 120px;;
+                max-width: 225px;
 
                 @include bp($foundation-small, $foundation-med) {
                     max-width: 200px;
@@ -214,10 +204,5 @@
         @include bp($tablet) {
             padding: 15px 0 13px;
         }
-        /*.nav-header--is-open & {
-            @include bp($foundation-small, $tablet) {
-                background: $color-grey-dark;
-            }
-        }*/
     }
 }
