--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -31,11 +31,25 @@
         padding-top: 4%;
     }
 }
+.ps-section {
+
+    img,
+    i {
+
+        @include bp($foundation-small, $foundation-med) {
+            display: none;
+        }
+    }
+}
 .ps-welcome-wrapper {
     padding-top: 4%;
 
-    .intro-statement h1 {
-        margin-bottom: 1.5em;
+    .intro-statement {
+        padding-bottom: 4%;
+
+        h1 {
+            margin-bottom: 0;
+        }
     }
     .ps-welcome {
         height: 310px;
@@ -158,7 +172,7 @@
                 background: $color-reverse-heading;
                 box-shadow: 1px 1px 1px 0 rgba(220,220,220,1);
                 height: 100%;
-                padding: 5% 12%;
+                padding: 5% 7%;
 
                 .columns,
                 .row {
@@ -180,6 +194,10 @@
                     color: $color-paid-search;
                     margin-top: 3em;
                     list-style-position: inside;
+                }
+
+                @include bp($my-very-large) {
+                    padding: 5% 8%;
                 }
             }
 
@@ -223,7 +241,7 @@
         position: absolute;
         right: 5%;
         top: 25%;
-        width: 27.25%;
+        width: 27.5%;
 
         form {
             background: $color-grey-dark;
@@ -248,6 +266,12 @@
             .columns,
             .row {
                 position: static;
+            }
+            .row {
+                margin: {
+                    left: -15px;
+                    right: -15px;
+                }
             }
 
             h4 {
@@ -307,10 +331,10 @@
             display: none;
         }
         @include bp($my-large) {
-            width: 27.75%;
+            width: 27.85%;
         }
         @include bp($my-very-large) {
-            width: 28%;
+            width: 28.125%;
         }
     }
     .statement {
@@ -369,12 +393,10 @@
         color: $color-primary;
         content: '•';
         display: block;
-        font-size: 1.5em;
         left: -20px;
         max-height: 0;
         max-width: 0;
         position: relative;
-        top: -.25em;
     }
 }
 
@@ -446,10 +468,8 @@
 
 .no-leak-skylight {
 
-    .full-height-wrapper {
-        float: left;
-    }
     .icon-no-leak {
+        float: left;
         height: 110px;
         margin-bottom: 1em;
         margin-right: 4em;
@@ -459,31 +479,30 @@
 
 .complete-system {
 
-    .full-height-wrapper {
-        float: right;
-    }
-
     h4 {
         margin-top: 1em;
     }
     img {
         float: right;
         margin-bottom: 1em;
-        width: 80%;
+        width: 25%;
     }
     p {
-        padding-right: 30%;
+        @include bp($foundation-med) {
+            padding-right: 33%;
+        }
     }
 }
 
 .installation-methods {
 
-    .full-height-wrapper {
+    img {
         float: right;
-
-        img {
-            float: right;
-            width: 70%;
+        width: 25%;
+    }
+    p {
+        @include bp($foundation-med) {
+            padding-right: 33%;
         }
     }
 }
