updated 'schedule a consultation' links to jump to contact form on contact page; adjusted velux logo placement in nav-header; adjusted padding for welcome intro-statement header; cleaned up about us styling on about page; adjusted discover-more mobile padding; brought contact form to top using z-index for night version of paid search

--- a/src/public/sass/layout/_nav-header.scss
+++ b/src/public/sass/layout/_nav-header.scss
@@ -209,6 +209,9 @@
             display: block;
             margin-top: 15px;
 
+            @include bp($tablet) {
+                margin-top: 0;
+            }
             @include bp($foundation-large) {
                 display: none;
             }
