--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -242,6 +242,7 @@
         right: 5%;
         top: 25%;
         width: 27.5%;
+        z-index: 100;
 
         form {
             background: $color-grey-dark;
