correct page placement on paid search form error; continued working on category page - still needs php for scroll link; fixed paid search night form padding issue; updated welcome area for only one small promotion; added footer padding for paid search with separate paid search footer

--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -307,8 +307,16 @@
             width: 100%;
 
             @include bp($foundation-med) {
+                display: inline-block;
                 margin-bottom: 0;
+                vertical-align: top;
                 width: 50%;
+            }
+        }
+        .numbers {
+
+            @include bp($foundation-med) {
+                margin-top: 2em;
             }
         }
         .hours {
@@ -361,4 +369,12 @@
 }
 .footer-wrapper {
     width: 100%;
+}
+
+.ps-footer {
+
+    @include bp($foundation-small, $foundation-med) {
+        background-color: #fff;
+        padding-bottom: 4em;
+    }
 }
