--- a/src/public/sass/pages/_paid-search.scss
+++ b/src/public/sass/pages/_paid-search.scss
@@ -41,6 +41,12 @@
         }
     }
 }
+#ps-form-anchor {
+  display: block;
+  height: 170px;
+  margin-top: -170px;
+  visibility: hidden;
+}
 .ps-welcome-wrapper {
     padding-top: 4%;
 
@@ -266,13 +272,8 @@
             }
             .columns,
             .row {
+                padding: 0;
                 position: static;
-            }
-            .row {
-                margin: {
-                    left: -15px;
-                    right: -15px;
-                }
             }
 
             h4 {
@@ -443,9 +444,18 @@
 
         .icon-phone {
             display: block;
-            height: 31px;
+            height: 27px;
             line-height: 0;
-            width: 31px;
+            width: 27px;
+
+            @include bp($mobile-landscape) {
+                height: 31px;
+                width: 31px;
+            }
+            @include bp($my-very-large) {
+                height: 36px;
+                width: 36px;
+            }
         }
     }
 }
