reduced font-size/made uppercase > ctas; reduced font-size of left breadcrumb; edited stroke color for contact form; edited brochure title display; updated warranty content with brochure image; began reworking footer and header

--- a/src/public/sass/helpers/_utilities.scss
+++ b/src/public/sass/helpers/_utilities.scss
@@ -116,6 +116,18 @@
     }
 }
 
+a.cta-text {
+    @extend %upper;
+
+    &:hover {
+        @extend %no-underline;
+    }
+
+    @include bp($mobile-landscape) {
+        font-size: .875em;
+    }
+}
+
 /*-----------------------
   @LISTS
 ------------------------*/
