--- a/src/public/sass/modules/_contact-modal.scss
+++ b/src/public/sass/modules/_contact-modal.scss
@@ -75,7 +75,7 @@
         @extend %snug-right;
     }
     input, textarea, select {
-        border: 1px solid $color-grey-light;
+        border: 1px solid $color-label;
         display: block;
         line-height: 1.25em;
         padding: .75em;
