--- a/src/public/sass/pages/_contact.scss
+++ b/src/public/sass/pages/_contact.scss
@@ -8,7 +8,7 @@
     }
 
     input, textarea, select {
-        border: 1px solid $color-grey-light;
+        border: 1px solid $color-label;
         display: block;
         line-height: 1.25em;
         padding: .75em;
