--- a/src/public/sass/pages/_why-skylights.scss
+++ b/src/public/sass/pages/_why-skylights.scss
@@ -1,6 +1,6 @@
-.why-skylights .intro-statement p {
+/*.why-skylights .intro-statement p {
     color: $color-grey-light;
-}
+}*/
 
 .reason {
     p {
