--- a/src/public/sass/modules/_forms.scss
+++ b/src/public/sass/modules/_forms.scss
@@ -23,7 +23,7 @@
 .icheckbox_flat {
     background: url('../images/flat.png');
     margin-right: 10px;
-    outline: 1px solid $color-grey-light;
+    outline: 1px solid $color-label;
     positon: relative;
     top: -2px;
 }
@@ -122,7 +122,7 @@
 
     .selectric {
         background: transparent;
-        border: 1px solid $color-grey-light;
+        border: 1px solid $color-label;
         border-radius: 0;
 
         .button {
