--- a/src/public/sass/modules/_testimonials.scss
+++ b/src/public/sass/modules/_testimonials.scss
@@ -7,7 +7,8 @@
     }
     
     p {
-        font-family: $font-family-display;
+        /*font-family: $font-family-display;*/
+        font-size: 1.125em;
         line-height: 2;
         margin-bottom: 2.75em;
     }
