--- a/src/public/sass/pages/_about.scss
+++ b/src/public/sass/pages/_about.scss
@@ -21,18 +21,19 @@
     .about-dealer-text {
         line-height: 2;
     }
-    .dealer-image {
-        float: right;
-
-        img {
-            box-shadow: 0 0 6px rgba(0,0,0,.3);
+    .about-dealer-image {
+        
+        .about-dealer-image--container {
+            background-position: 50% 50%;
+            background-size: cover;
+            background-repeat: no-repeat;
+            border-radius: 100%;
             height: 250px;
             width: 250px;
         }
-
-        @include bp($foundation-med) {
-            margin-left: 20px;
-        }
+        /*img {
+            box-shadow: 0 0 6px rgba(0,0,0,.3);
+        }*/
     }
 }
 
@@ -83,7 +84,7 @@
 
     .principle-container {
         border-top: 1px solid $color-grey-border;
-        font-family: $font-family-display;
+        /*font-family: $font-family-display;*/
         padding: 12% 18%;
         text-align: center;
 
