--- a/src/public/sass/pages/_brochures.scss
+++ b/src/public/sass/pages/_brochures.scss
@@ -7,11 +7,8 @@
         .brochure__image {
             margin-bottom: 1.25em;
         }
-        a {
-            text-transform: uppercase;
-        }
         h4 {
-            margin-bottom: 0;
+            margin-bottom: .5em;
             text-transform: none;
         }
         p {
