edited footer after removing gallery link; edited header so products dropdown fits on mobile w/ 2-column layout; tried to edit slick for about gallery

--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -195,6 +195,10 @@
                     min-width: 40%;
                 }
             }
+            .nav-major,
+            .nav-minor {
+                vertical-align: top;
+            }
 
             @include bp($foundation-small, $foundation-large) {
                 line-height: 0;
