--- a/src/public/sass/modules/_slick.scss
+++ b/src/public/sass/modules/_slick.scss
@@ -15,9 +15,9 @@
     left: -45px;
 }
 
-.slick-slide img {
+/*.slick-slide img {
     display: inline-block;
-}
+}*/
 
 .slick-slider {
     margin-bottom: 0;
