--- a/src/public/sass/pages/_contact.scss
+++ b/src/public/sass/pages/_contact.scss
@@ -10,6 +10,7 @@
     input, textarea, select {
         border: 1px solid $color-label;
         display: block;
+        font-size: 1em;
         line-height: 1.25em;
         padding: .75em;
 
