merging; updating footer for nav-major vertical align after gallery taken out; moved breadcrumb link over

--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -388,8 +388,8 @@
 
 .ps-footer {
 
-    @include bp($foundation-small, $foundation-med) {
-        background-color: #fff;
-        padding-bottom: 4em;
+    @include bp($foundation-small, $tablet) {
+        background-color: #eee;
+        padding-bottom: 3.75em;
     }
 }
