edited nav-header for products dropdown on mobile; edited header so hamburger icon is left of phone number on tablet; added houzz link to social icons; edited welcome styling to for new main image; began working on search/locator footer

--- a/src/public/sass/helpers/_variables.scss
+++ b/src/public/sass/helpers/_variables.scss
@@ -45,6 +45,7 @@ $color-grey-border: #dfdfdf;
 $color-grey-dark-border: #4a4f50;
 $color-input-bg: #54595c;
 $color-label: #c6c6c6;
+$color-red-hover: #d9171f;
 $color-reverse-heading: #fff;
 $color-reverse: #dfdfdf;
 $color-paid-search: #737475;
