--- a/src/public/sass/layout/_footer.scss
+++ b/src/public/sass/layout/_footer.scss
@@ -32,7 +32,7 @@
 }
 
 .footer-grey-border {
-    background: $color-secondary;
+    background: $color-grey-dark-border;
     bottom: 155px;
     display: block;
     height: 1px;
@@ -129,13 +129,13 @@
                     color: $color-reverse;
 
                     @include bp($foundation-large) {
-                        margin-right: 4%;
+                        margin-right: 6%;
                     }
                     @include bp($my-large) {
-                        margin-right: 8%;
+                        margin-right: 14%;
                     }
                     @include bp($my-very-large) {
-                        margin-right: 10%;
+                        margin-right: 15%;
                     }
                 }
                 a:last-child {
@@ -150,15 +150,16 @@
                     width: 50%;
                 }
                 @include bp($foundation-large) {
-                    margin-right: 3%;
-                    min-width: 50%;
-                }
-                @include bp($my-large) {
+                    margin-right: 5%;
                     min-width: 40%;
                 }
+                @include bp($my-large) {
+                    margin-right: 6%;
+                    min-width: 30%;
+                }
                 @include bp($my-very-large) {
-                    margin-right: 5%;
-                    min-width: 50%;
+                    margin-right: 7%;
+                    min-width: 33%;
                 }
                 a:last-child {
                     margin-right: 0;
@@ -168,16 +169,16 @@
                 text-align: left;
 
                 a {
-                    color: $color-grey;
+                    color: $color-social-icons;
 
                     @include bp($foundation-large) {
-                        margin-right: 4%;
+                        margin-right: 5%;
                     }
                     @include bp($my-large) {
-                        margin-right: 10%;
+                        margin-right: 11%;
                     }
                     @include bp($my-very-large) {
-                        margin-right: 11%;
+                        margin-right: 12%;
                     }
                 }
 
@@ -205,9 +206,6 @@
             }
             @include bp($tablet, foundation-large) {
                 text-align: left;
-            }
-            @include bp($foundation-large, $my-large) {
-                left: -10px;
             }
         }
 
